src/test/deca/codegen/valid/operateur_and_court_circuit.deca
// Programme de test de l'opérateur NOT en court circuit (!):


{
    int x = 5;
    if (x < 3 && x < 10) {
        println("x est plus grand que 3 et le résultat de la division par deux est inférieur à 10");
    } else {
        println("x n'est pas plus grand que 3 ou le résultat de la division par deux n'est pas inférieur à 10");
    }
}